--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
-title: Your awesome title
+title: Finlay Miller
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Finlay Miller
+  email: finlay@dal.ca
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
@@ -16,32 +13,12 @@ minima:
 
   # generate social links in footer
   social_links:
-    twitter: jekyllrb
-    github:  jekyll
-    # devto: jekyll
-    # dribbble: jekyll
-    # facebook: jekyll
-    # flickr:   jekyll
+    github:  finlaymiller
     # instagram: jekyll
     # linkedin: jekyll
-    # pinterest: jekyll
-    # youtube: jekyll
-    # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
-    # youtube_channel_name: CloudCannon
-    # telegram: jekyll
-    # googleplus: +jekyll
-    # microdotblog: jekyll
-    # keybase: jekyll
 
     # Mastodon instances
     # mastodon:
-    # - username: jekyll
-    #   instance: example.com
-    # - username: jekyll2
-    #   instance: example.com
-
-    # GitLab instances
-    # gitlab:
     # - username: jekyll
     #   instance: example.com
     # - username: jekyll2
