A bunch of small changes and hw2 post 1

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,4 +22,8 @@ cs285:
         url: /cs285/hw1/intro-to-deep-rl
       - title: "Homework 1"
         url: cs285/hw1/solutions
+  - title: "Homework 2: Policy Gradients"
+    children:
+      title: "Policy Gradients"
+      url: /cs285/hw2/policy-gradients
       
