--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,6 @@ cs285:
         url: cs285/hw1/solutions
   - title: "Homework 2: Policy Gradients"
     children:
-      title: "Policy Gradients"
-      url: /cs285/hw2/policy-gradients
+      - title: "Policy Gradients"
+        url: /cs285/hw2/policy-gradients
       
